style/style.css
.card{
    display: flex;
    flex-flow: column;
    align-items: center;
    border-radius: 25px;
    border: solid #2a2929 2px;
    margin-left: 200px;
    margin-right: 200px;
    min-height: 650px;
    background-color: #ffffb2;
}
h1{
    font-weight: bolder;
    font-family: 'Press Start 2P', cursive;
    padding: 20px;
    margin-bottom: 30px;
    margin-top: 20px;
    margin-left: 20px;
    margin-right: 20px;
    border: solid #2a2929;
    border-radius: 25px;
    background-image: linear-gradient(#f5cba7, #d4efdf );
}
.buttonWrapper{
    padding-bottom: 20px;
}
.iconButton{
    min-width: 100px;
    background-color: #efefef;
}
#playButton{
    background-color: #efefef;
    font-size: 30px;
}
button{
    margin: 10px;
    padding: 15px;
    font-size: 40px;
    font-family: 'Press Start 2P', cursive;
    border-radius: 25px;
}
button:hover{
    cursor: pointer;
}

.selectedButton{
    background-color: #db764f;
}
.computerChoice{
    background-color: #efefef;
    font-family: 'Press Start 2P', cursive;
    padding: 20px;
    color: black;
    border: solid #2a2929 1px;
    border-radius: 25px;
    margin-top: 15px;
    font-size: 20px;
}

.winningMessage{
    font-family: 'Press Start 2P', cursive;
    padding: 20px;
    color: black;
    border: solid #2a2929 1px;
    border-radius: 25px;
    animation-name: winning;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    margin-top: 15px;
}
.losingMessage{
    font-family: 'Press Start 2P', cursive;
    color: black;
    border: solid #2a2929 1px;
    border-radius: 25px;
    padding: 20px;
    animation-name: losing;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    margin-top: 15px;
}
.tiedMessage{
    font-family: 'Press Start 2P', cursive;
    padding: 20px;
    color: black;
    border: solid #2a2929 1px;
    border-radius: 25px;
    animation-name: tied;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    margin-top: 15px;
}

.scoreWrapper{
    display: flex;
    flex-flow: row;
}
.score{
    border: solid #2a2929 1px;
    border-radius: 25px;
    background-color: #efefef;
    margin-left: 10px;
    margin-right: 10px;
    padding: 15px;
    font-size: 35px;
    font-family: 'Press Start 2P', cursive;
    min-width: 100px;
}
.scoreLabel{
    font-size: 20px;
    font-family: 'Press Start 2P', cursive;
}

@keyframes losing {
    from {background-color: #f5cba7;}
    to {background-color: #e79b84;}
}
@keyframes winning {
    from {background-color: #60ac80;}
    to {background-color: #27ae60;}
}
@keyframes tied {
    from {background-color: #d4efdf;}
    to {background-color: #73978b;}
}

@media only screen and (max-width: 900px) {
    .card{
        margin-left: 10px;
        margin-right: 10px;
    }
    h1{
        font-size: 20px;
        margin-bottom: 10px;

    }
    .buttonWrapper{
        padding-bottom: 10px;
        display: flex;
    }
    .iconButton{
      margin: 1em;
      min-width: 80px;
    }
    button {
        font-size: 20px;
    }
    .computerChoice{
        font-size: 10px;
    }
    .score{
        font-size: 10px;
    }
    .scoreLabel{
        font-size: 10px;
    }
    .losingMessage{
        margin-top: 10px;
        font-size: 10px;
    }
    .winningMessageMessage{
        margin-top: 10px;
        font-size: 10px;
    }
    .tiedMessageMessage{
        margin-top: 10px;
        font-size: 10px;
    }
}

